--- a/EFTest/Views/MainWindow.xaml
+++ b/EFTest/Views/MainWindow.xaml
@@ -4,9 +4,36 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EFTest.Views"
+        xmlns:vm="clr-namespace:EFTest.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
     <Grid>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0">
+            <Button Content="Create new Vectors" Command="{Binding CreateVectorsCommand}"/>
+            <Button Content="Load Vectors" Command="{Binding LoadVectorsCommand}"/>
+        </StackPanel>
+
+        <ListBox x:Name="VectorViews" Grid.Column="1">
+
+            <ListBox.ItemTemplate>
+
+                <DataTemplate DataType="{x:Type vm:VectorVM}">
+
+                    <local:VectorView/>
+
+                </DataTemplate>
+
+            </ListBox.ItemTemplate>
+
+        </ListBox>
         
     </Grid>
+    
 </Window>
