--- a/EFTest/Views/VectorView.xaml
+++ b/EFTest/Views/VectorView.xaml
@@ -8,7 +8,31 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
    
-    <Grid>
-            
+    <Grid Background="Orange">
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Column="0">
+            <TextBlock Text="{Binding X}"/>
+        </Grid>
+
+        <Grid Grid.Column="1">
+            <TextBlock Text="{Binding Y}"/>
+        </Grid>
+
+        <Grid Grid.Column="2">
+            <TextBlock Text="{Binding Z}"/>
+        </Grid>
+
+        <Grid Grid.Column="3">
+
+        </Grid>
+    
     </Grid>
+    
 </UserControl>
