--- a/EFTest/Views/VectorView.xaml
+++ b/EFTest/Views/VectorView.xaml
@@ -5,33 +5,40 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EFTest.Views"
              xmlns:vm="clr-namespace:EFTest.ViewModels"
+             d:DataContext="{d:DesignInstance Type=vm:VectorVM}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="30" d:DesignWidth="800">
    
-    <Grid Background="Orange">
+    <Grid Background="Snow">
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         
         <Grid Grid.Column="0">
-            <TextBlock Text="{Binding X}"/>
+            <TextBlock Text="{Binding X, Mode=TwoWay}"/>
         </Grid>
 
         <Grid Grid.Column="1">
-            <TextBlock Text="{Binding Y}"/>
+            <TextBlock Text="{Binding Y, Mode=TwoWay}"/>
         </Grid>
 
         <Grid Grid.Column="2">
-            <TextBlock Text="{Binding Z}"/>
+            <TextBlock Text="{Binding Z, Mode=TwoWay}"/>
         </Grid>
 
-        <Grid Grid.Column="3">
+        <StackPanel Grid.Column="3" Orientation="Horizontal">
 
-        </Grid>
+            <Button Content="Create new vector"
+                    Command="{Binding CreateNewVectorCommand}"/>
+
+            <Button Content="Save vector changes"
+                  Command="{Binding SaveVectorChangesCommand}"/>
+
+        </StackPanel>
     
     </Grid>
     
